<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.documents.DocumentsFragment">

    <TextView
        android:id="@+id/tv_documents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/documents"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <SearchView
        android:id="@+id/til_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="24dp"
        android:theme="@style/AppSearchView"
        android:queryHint="@string/search"
        android:queryBackground="@android:color/transparent"
        android:iconifiedByDefault="false"
        android:searchHintIcon="@drawable/search"
        android:background="@drawable/rounded_search_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_documents"/>

    <!--    <com.google.android.material.textfield.TextInputLayout-->
    <!--        android:id="@+id/til_search"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:hint="@string/search"-->
    <!--        app:hintTextColor="@color/text_color"-->
    <!--        android:layout_marginEnd="30dp"-->
    <!--        app:boxCornerRadiusBottomEnd="12dp"-->
    <!--        app:boxCornerRadiusBottomStart="12dp"-->
    <!--        app:boxCornerRadiusTopEnd="12dp"-->
    <!--        app:boxBackgroundColor="@color/white"-->
    <!--        app:boxStrokeColor="@color/white"-->
    <!--        app:boxCornerRadiusTopStart="12dp"-->
    <!--        app:boxStrokeWidth="0dp"-->
    <!--        app:boxStrokeWidthFocused="0dp"-->
    <!--        app:hintAnimationEnabled="false"-->
    <!--        app:expandedHintEnabled="true"-->
    <!--        app:cursorColor="@color/accent"-->
    <!--        android:layout_marginTop="24dp"-->
    <!--        android:layout_marginStart="30dp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/tv_documents"-->
    <!--        app:startIconDrawable="@drawable/search">-->

    <!--        <com.google.android.material.textfield.TextInputEditText-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:inputType="textFilter"/>-->

    <!--    </com.google.android.material.textfield.TextInputLayout>-->


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_search"
        tools:listitem="@layout/item_recent_result" />

    <TextView
        android:visibility="invisible"
        android:id="@+id/tv_no_recent_files"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins"
        android:text="@string/no_recent_files"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>