<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">


    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_day"
        android:textColor="@color/text_color"
        android:textSize="12sp"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_choose_document_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/choose_document_type"
        android:textSize="20sp"
        android:textColor="@color/text_color"
        android:fontFamily="@font/poppins"
        android:layout_marginEnd="30dp"
        app:layout_constraintStart_toStartOf="@id/tv_welcome"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        app:layout_constraintEnd_toEndOf="parent"/>

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:backgroundTint="@color/primary"
        android:columnCount="2"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_document_type"
        app:layout_constraintStart_toStartOf="@id/tv_choose_document_type"
        app:layout_constraintEnd_toEndOf="@id/tv_choose_document_type">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_id_card"
            android:layout_width="150dp"
            android:layout_height="128dp"
            app:cardUseCompatPadding="true"
            android:layout_columnWeight="1"
            app:cardElevation="0dp"
            android:layout_row="1"
            app:cardCornerRadius="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/id_card"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:text="@string/id_card"
                    android:fontFamily="@font/poppins"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_passport"
            android:layout_width="150dp"
            app:cardUseCompatPadding="true"
            android:layout_height="128dp"
            android:layout_columnWeight="1"
            android:layout_row="1"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/id_card"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:text="Cвидетельство о рождении"
                    android:fontFamily="@font/poppins"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_driver_license"
            android:layout_width="150dp"
            app:cardUseCompatPadding="true"
            android:layout_height="128dp"
            android:layout_columnWeight="1"
            android:layout_row="1"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/id_card"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:text="@string/driver_license"
                    android:fontFamily="@font/poppins"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_something_else"
            android:layout_width="150dp"
            android:layout_height="128dp"
            app:cardUseCompatPadding="true"
            android:layout_columnWeight="1"
            android:layout_row="1"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/id_card"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:text="Другое"
                    android:fontFamily="@font/poppins"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>


    <TextView
        android:id="@+id/tv_recent_files"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recent_files"
        android:layout_marginTop="32dp"
        android:textSize="16sp"
        android:textColor="@color/text_color"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintTop_toBottomOf="@id/grid_layout"
        app:layout_constraintStart_toStartOf="@id/grid_layout"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_recent_files"
        android:textColor="@color/accent"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_recent_files"
        app:layout_constraintEnd_toEndOf="@id/grid_layout"
        app:layout_constraintTop_toTopOf="@id/tv_recent_files" />


    <ProgressBar
        android:id="@+id/loading_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_marginBottom="90dp"
        android:translationZ="1dp"
        android:indeterminateTint="@color/accent"
        android:indeterminateTintMode="src_atop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_recent_files" />


    <androidx.cardview.widget.CardView
        android:visibility="invisible"
        android:id="@+id/cv_recent_doc_first"
        android:layout_width="0dp"
        android:layout_height="80dp"
        app:cardCornerRadius="12dp"
        android:layout_marginTop="16dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_recent_files"
        app:layout_constraintStart_toStartOf="@id/tv_recent_files"
        app:layout_constraintEnd_toEndOf="@id/grid_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_doc_preview_1"
                android:layout_width="50dp"
                android:layout_height="48dp"
                app:cardElevation="0dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pdf"/>
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/tv_doc_name_first"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/poppins"
                android:text="Document name"
                android:textColor="@color/text_color"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/btn_option_first"
                app:layout_constraintStart_toEndOf="@+id/cv_doc_preview_1"
                app:layout_constraintTop_toTopOf="@+id/cv_doc_preview_1" />

            <TextView
                android:id="@+id/tv_doc_date_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="Today"
                android:textSize="12sp"
                android:fontFamily="@font/poppins"
                app:layout_constraintStart_toEndOf="@id/cv_doc_preview_1"
                app:layout_constraintBottom_toBottomOf="@+id/cv_doc_preview_1" />

            <ImageView
                android:id="@+id/btn_option_first"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/options"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:visibility="invisible"
        android:id="@+id/cv_recent_doc_second"
        android:layout_width="0dp"
        android:layout_height="80dp"
        app:cardCornerRadius="12dp"
        android:layout_marginTop="16dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/cv_recent_doc_first"
        app:layout_constraintStart_toStartOf="@id/cv_recent_doc_first"
        app:layout_constraintEnd_toEndOf="@id/grid_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_doc_preview_2"
                android:layout_width="50dp"
                android:layout_height="48dp"
                app:cardElevation="0dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pdf"/>
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/tv_doc_name_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Document name"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/poppins"
                android:textSize="14sp"
                android:textColor="@color/text_color"
                app:layout_constraintStart_toEndOf="@+id/cv_doc_preview_2"
                app:layout_constraintTop_toTopOf="@+id/cv_doc_preview_2" />

            <TextView
                android:id="@+id/tv_doc_date_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="Today"
                android:textSize="12sp"
                android:fontFamily="@font/poppins"
                app:layout_constraintStart_toEndOf="@id/cv_doc_preview_2"
                app:layout_constraintBottom_toBottomOf="@+id/cv_doc_preview_2" />

            <ImageView
                android:id="@+id/btn_option_second"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/options"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>





</androidx.constraintlayout.widget.ConstraintLayout>